<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".EditorFragment">

        <TextView
            android:id="@+id/txtEditTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_tripName_label"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEditTrip" >

            <Spinner
                android:id="@+id/etTripName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#e0e0e0"
                android:inputType="textAutoComplete|textCapWords"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_destination_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/item_destination_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_tripName_label">

            <EditText
                android:id="@+id/etDestination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_destination_label">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_date_req"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/item_rick_label"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Risk Evaluate: "
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_date_label">

        </TextView>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="122dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="@+id/item_date_label"
            app:layout_constraintTop_toBottomOf="@+id/item_date_label"

            >

            <RadioButton
                android:id="@+id/radioButton_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/radioButton_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="No" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_note_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_rick_label"

            >

            <EditText
                android:id="@+id/EtNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:textStyle="bold"
                android:hint="@string/item_note_req"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_services_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/item_services_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_note_label"

            >

            <Spinner
                android:id="@+id/etServices"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#e0e0e0"
                android:inputType="textAutoComplete|textCapWords"
                android:textStyle="bold"
                android:layout_marginTop="0dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_note_label"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/expense_action"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/addExpenses"
            android:background="@drawable/mybutton"
            style="?android:attr/borderlessButtonStyle"
            android:theme="@style/ThemeOverlay.Material3.DynamicColors.Light"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/item_services_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:bottomRightRadius="50dp"
            android:bottomLeftRadius="50dp"
            android:topLeftRadius="50dp"
            android:topRightRadius="50dp"/>

        <Button
            android:id="@+id/edit_action"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_action"
            android:background="@drawable/mybutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_action"
            android:bottomRightRadius="50dp"
            android:bottomLeftRadius="50dp"
            android:topLeftRadius="50dp"
            android:topRightRadius="50dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
