<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".AddTripFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:ignore="MissingConstraints" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_tripName_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/item_tripName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#e0e0e0"
                android:inputType="textAutoComplete|textCapWords"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_destination_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/item_destination_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_tripName_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_destination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/item_date_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_destination_label">

            <EditText
                android:id="@+id/item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/item_rick_label"
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Risk Evaluate: "
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_date_label">

        </TextView>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="122dp"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="@+id/item_date_label"
            app:layout_constraintTop_toBottomOf="@+id/item_date_label"

            >

            <RadioButton
                android:id="@+id/radioButton_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/radioButton_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="No" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_note_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/item_note_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_rick_label"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/item_services_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/item_services_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_note_label"

            >

            <Spinner
                android:id="@+id/item_services"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#e0e0e0"
                android:inputType="textAutoComplete|textCapWords"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_services_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
